re PR rtl-optimization/6405 (Loop-unrolling related performance regressions)

PR optimization/6405
	* unroll.c (loop_iterations): last_loop_insn should be the previous
	non-note instruction before loop->end.
	* loop.c (strength_reduce): The conditional jump is the last
	non-note instruction before loop->end (as above).

From-SVN: r56956